feat(img): img & placeholder

--- a/.gitignore
+++ b/.gitignore
@@ -211,4 +211,5 @@ sketch
 .history
 .ionide
 
-# End of https://www.toptal.com/developers/gitignore/api/node,react,visualstudiocode,osx,firebase
+### raw placeholder
+spider.png
