--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "upload:images": "tsx src/tools/upload-images.ts"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.17.3",
     "firebase": "^11.0.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
+    "react-d3-tree": "^3.6.6",
     "react-dom": "^18.3.1",
-    "react-d3-tree": "^3.6.6"
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
+    "@types/google-cloud__storage": "^1.7.2",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
